--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "github:tailwindcss/typography",
     "autoprefixer": "10.4.15",
+    "eslint-plugin-prettier": "^5.0.0",
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
@@ -22,7 +24,10 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "daisyui": "^3.7.3",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
     "prettier": "^3.0.3",
+    "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "typescript": "5.2.2"
   },
