--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,10 @@
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
-    "**/.DS_Store": true
+    "**/.DS_Store": true,
+    ".vscode/": true,
+    "node_modules/": true,
+    ".next/": true
   },
-  "hidefiles.selectedProfile": "Show All Files"
+  "hidefiles.selectedProfile": "Strict"
 }
