--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
 version: "3.1"
 
 services:
-  pihole-pause:
+  ians-portfolio:
     build: .
     restart: always
     ports:
       - 3000:3000
-    # volumes:
-    #     - ./db_data:/usr/src/app/db
